--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>J Dev</title>
     <!-- bootstrap cdn  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- custom css linked -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <!-- navbar section  -->
         <section>
-            <nav class="navbar navbar-expand-lg bg-light py-4">
+            <nav class="navbar navbar-expand-lg navbar-expand-md py-4">
                 <div class="container">
                   <a class="navbar-brand fs-3 fw-bold" href="#">J Dev</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +42,7 @@
                       </li>
 
                     </ul>
-                    <a class="btn text-info border border-info ms-auto" href="">Register</a>
+                    <a class="btn text-info border border-info ms-auto d-lg-inline-block d-md-none" href="">Register</a>
                   </div>
                 </div>
               </nav>
@@ -48,8 +50,41 @@
     </header>
     <main>
         <!-- cover section -->
-        <section>
-            
+        <section class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 carousel-height" alt="cover-1">
+                    <div class="carousel-caption d-md-block mb-5">
+                      <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                      <p class="mb-5">Some representative placeholder content for the first slide.</p>
+                      <a class="btn bg-info text-white" href="">Get Started</a>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 carousel-height" alt="cover-2">
+                    <div class="carousel-caption d-md-block mb-5">
+                      <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                      <p class="mb-5">Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 carousel-height" alt="cover-3">
+                    <div class="carousel-caption d-md-block mb-5">
+                      <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                      <p class="mb-5">Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>  
         </section>
     </main>
     <!-- bootstrap js link -->
