--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     <div class="carousel-caption d-md-block mb-5">
                       <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
                       <p class="mb-5">Some representative placeholder content for the second slide.</p>
+                      <a class="btn bg-info text-white" href="">Get Started</a>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -73,6 +74,7 @@
                     <div class="carousel-caption d-md-block mb-5">
                       <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
                       <p class="mb-5">Some representative placeholder content for the third slide.</p>
+                      <a class="btn bg-info text-white" href="">Get Started</a>
                     </div>
                   </div>
                 </div>
@@ -85,6 +87,114 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>  
+        </section>
+        <!-- Popular Courses Section -->
+        <section class="container mx-auto">
+            <div class="head-text text-center mt-5">
+                <h2>Discover Our Popular Courses</h2>
+                <p class="text-secondary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="courses mt-5">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-sm-12">
+                                    <img src="images/course/course-1.png" class="img-fluid card-width rounded-start w-sm-100" alt="course-1">
+                                </div>
+                              <div class="col-md-8">
+                                        <div class="card-body">
+                                        <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                        <p class="card-text"><small class="text-muted">Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                                        <h6 class="text-info">Price : 20$</h6>
+                                    </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-sm-12">
+                                    <img src="images/course/course-2.png" class="img-fluid card-width rounded-start w-sm-100" alt="course-2">
+                                </div>
+                              <div class="col-md-8">
+                                        <div class="card-body">
+                                        <h5 class="card-title">Javascript Basic to advanced</h5>
+                                        <p class="card-text"><small class="text-muted">Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                                        <h6 class="text-info">Price : 20$</h6>
+                                    </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-sm-12">
+                                    <img src="images/course/course-3.png" class="img-fluid card-width rounded-start w-sm-100" alt="course-3">
+                                </div>
+                              <div class="col-md-8">
+                                        <div class="card-body">
+                                        <h5 class="card-title">Fullstack Web Development</h5>
+                                        <p class="card-text"><small class="text-muted">Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                                        <h6 class="text-info">Price : 20$</h6>
+                                    </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-sm-12">
+                                    <img src="images/course/course-4.png" class="img-fluid card-width rounded-start w-sm-100" alt="course-4">
+                                </div>
+                              <div class="col-md-8">
+                                        <div class="card-body">
+                                        <h5 class="card-title">Digital Marketing</h5>
+                                        <p class="card-text"><small class="text-muted">Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                                        <h6 class="text-info">Price : 20$</h6>
+                                    </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-sm-12">
+                                    <img src="images/course/course-5.png" class="img-fluid card-width rounded-start w-sm-100" alt="course-5">
+                                </div>
+                              <div class="col-md-8">
+                                        <div class="card-body">
+                                        <h5 class="card-title">Photography Basic Rules</h5>
+                                        <p class="card-text"><small class="text-muted">Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                                        <h6 class="text-info">Price : 20$</h6>
+                                    </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-sm-12">
+                                    <img src="images/course/course-6.png" class="img-fluid card-width rounded-start w-sm-100" alt="course-6">
+                                </div>
+                              <div class="col-md-8">
+                                        <div class="card-body">
+                                        <h5 class="card-title">Motion Graphics
+                                        </h5>
+                                        <p class="card-text"><small class="text-muted">Some quick example text to build on the card title and make up the bulk of the card.</small></p>
+                                        <h6 class="text-info">Price : 20$</h6>
+                                    </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- bootstrap js link -->
