--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </div>  
         </section>
         <!-- Popular Courses Section -->
-        <section class="container mx-auto">
+        <section class="container">
             <div class="head-text text-center mt-5">
                 <h2>Discover Our Popular Courses</h2>
                 <p class="text-secondary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -194,8 +194,53 @@
                           </div>
                     </div>
                 </div>
+                <div class="see-more-courses d-flex justify-content-center mt-3">
+                    <a class="btn bg-info text-white fw-bold" href="">See More Courses</a>
+                </div>
             </div>
         </section>
+        <!-- Explore Section -->
+        <section class="container">
+            <div class="explore-area mt-5 bg-explore">
+                <div class="row">
+                    <div class="col-lg-5 col-md-5">
+                        <img class="img-fluid carousel-height" src="images/working.png" alt="">
+                    </div>
+                    <div class="col-lg-7 col-md-7 d-flex justify-content-center align-items-center">
+                        <div class="explore-text p-4">
+                            <h2>Explore The elearning Institute</h2>
+                                <small><p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the
+                                majority have suffered alteration in some form, by injected humour, or
+                                randomised words which don't look even slightly believable. If you are going
+                                to use a passage of Lorem Ipsum, you need to be sure. <br> <br> Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                                generators on the Internet tend to repeat predefined.
+                                </p></small>
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                        <h3 class="fw-bold">3.2K+</h3>
+                                        <p class="text-secondary">Online Course
+                                        </p>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                        <h3 class="fw-bold">600+
+                                        </h3>
+                                        <p class="text-secondary">Expert member
+                                        </p>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6 col-sm-6">
+                                        <h3 class="fw-bold">1k+</h3>
+                                        <p class="text-secondary">Rating & Review
+                                        </p>
+                                    </div>
+                                </div>
+                                <a class="btn bg-info text-white fw-bold" href="">Read More
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
