--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </section>
         <!-- register section -->
         <section class="container bg-info rounded my-5">
-            <div class="register-area p-5 d-flex flex-lg-row flex-md-column flex-sm-column justify-content-between align-items-center text-center text-lg-start">
+            <div class="register-area p-5 d-lg-flex flex-lg-row flex-md-column flex-sm-column justify-content-between align-items-center text-center text-lg-start">
                 <div class="register-text">
                     <h3 class="text-white text-lg-left">Ready to join?</h3>
                     <small><p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p></small>
@@ -280,10 +280,54 @@
         </section>
         <!-- student section -->
         <section class="container">
-            <h2>Meet Our Successfull Students</h2>
+          <h2>Meet Our Successfull Students</h2>
+          <small class="text-secondary"><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p></small>
+          <div class="students-photos">
+            <div class="row">
+              <div class="col-lg-3 col-md-6">
+                <div class="card">
+                  <img src="images/student/student-1.png" class="card-img-top img-fluid" alt="student-1">
+                  <div class="card-body">
+                    <p class="card-text fw-semibold">Awlad Hossain</p>
+                    <small><p class="text-secondary">UIUX Designer</p></small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                <div class="card">
+                  <img src="images/student/student-2.png" class="card-img-top img-fluid" alt="student-2">
+                  <div class="card-body">
+                    <p class="card-text fw-semibold">Jannatul Islam</p>
+                    <small><p class="text-secondary">Motion Designer</p></small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                <div class="card">
+                  <img src="images/student/student-3.png" class="card-img-top img-fluid" alt="student-3">
+                  <div class="card-body">
+                    <p class="card-text fw-semibold">Imran Hossain
+                    </p>
+                    <small><p class="text-secondary">Graphic Designer</p></small>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                <div class="card">
+                  <img src="images/student/student-4.png" class="card-img-top img-fluid" alt="student-4">
+                  <div class="card-body">
+                    <p class="card-text fw-semibold">Nishi Akter</p>
+                    <small><p class="text-secondary">Web Developer
+                    </p></small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="view_all d-flex justify-content-center my-5">
+            <a class="btn bg-info text-white fw-bold" href="">View All</a>
+        </div>
         </section>
-
-
     </main>
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
