--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <!-- custom css linked -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/cf6ebc260e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -283,7 +285,7 @@
           <h2>Meet Our Successfull Students</h2>
           <small class="text-secondary"><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p></small>
           <div class="students-photos">
-            <div class="row">
+            <div class="row g-3">
               <div class="col-lg-3 col-md-6">
                 <div class="card">
                   <img src="images/student/student-1.png" class="card-img-top img-fluid" alt="student-1">
@@ -328,6 +330,72 @@
             <a class="btn bg-info text-white fw-bold" href="">View All</a>
         </div>
         </section>
+        <!-- student feedback -->
+        <section class="container">
+          <h2 class="text-center">Some Students Feedback</h2>
+          <small class="text-secondary text-center"><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p></small>
+          <div class="feedbacks my-5">
+            <div class="row g-3">
+              <div class="col-lg-6 col-md-12">
+                <div class="card p-4">
+                  <div class="top-img d-flex justify-content-between">
+                    <img src="images/comma.png" alt="comma">
+                    <div class="stat">
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-regular fa-star text-warning"></i>
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <small><p class="card-text text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p></small>
+                    <div class="feedback-footer pt-3 d-flex ali">
+                      <div>
+                        <img class="img-fluid" src="images/student/student-5.png" alt="">
+                      </div>
+                      <div class="feedback-author ms-2">
+                        <h6 class="fw-semi-bold m-0">Awlad Hossain</h6>
+                        <small class="text-secondary"><p>UI Designer</p></small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12">
+                <div class="card p-4">
+                  <div class="top-img d-flex justify-content-between">
+                    <img src="images/comma.png" alt="comma">
+                    <div class="stat">
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-solid fa-star text-warning"></i>
+                      <i class="fa-regular fa-star text-warning"></i>
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <small><p class="card-text text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p></small>
+                    <div class="feedback-footer pt-3 d-flex ali">
+                      <div>
+                        <img class="img-fluid" src="images/student/student-6.png" alt="">
+                      </div>
+                      <div class="feedback-author ms-2">
+                        <h6 class="fw-semi-bold m-0">Shanta Akter
+                        </h6>
+                        <small class="text-secondary"><p>Graphic Designer</p></small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="view_all d-flex justify-content-center my-5 d-lg-none">
+              <a class="btn bg-info text-white fw-bold" href="">View All</a>
+          </div>
+          </div>
+        </section>
+
     </main>
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
