--- a/index.html
+++ b/index.html
@@ -456,6 +456,32 @@
             </div>
           </div>
         </section>
+        <!-- Companys Section -->
+        <section class="container mt-5 d-lg-block d-md-none d-sm-none ">
+          <h2 class="text-center">Trusted by over 800+ companies</h2>
+          <div class="companys d-flex justify-content-center align-items-center m-4">
+            <div class="row">
+              <div class="col-2">
+                <img src="images/company/company-1.png" alt="pic" class="img-fluid">
+              </div>
+              <div class="col-2">
+                <img src="images/company/company-2.png" alt="pic" class="img-fluid">
+              </div>
+              <div class="col-2">
+                <img src="images/company/company-3.png" alt="pic" class="img-fluid">
+              </div>
+              <div class="col-2">
+                <img src="images/company/company-4.png" alt="pic" class="img-fluid">
+              </div>
+              <div class="col-2">
+                <img src="images/company/company-5.png" alt="pic" class="img-fluid">
+              </div>
+              <div class="col-2">
+                <img src="images/company/company-6.png" alt="pic" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
