--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           </div>
         </section>
         <!-- Frequently Asked Questions Section -->
-        <section class="container">
+        <section class="container mb-5">
           <h2 class="text-center">Frequently Asked Questions</h2>
           <small class="text-secondary text-center"><p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p></small>
           <div class="row">
@@ -440,12 +440,12 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <h2 class="accordion-header" id="headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                         What is the semantic tag?
                       </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         Syntax and Semantics. Syntax is the arrangement of elements and attributes to create well-formed documents. Semantics is concerned with meaning. In HTML, this is the purpose of elements and attributes, and the logical (sense and reference) relationship between elements and the attributes of those elements.
                       </div>
@@ -457,7 +457,7 @@
           </div>
         </section>
         <!-- Companys Section -->
-        <section class="container mt-5 d-lg-block d-md-none d-sm-none ">
+        <section class="container d-lg-block d-none ">
           <h2 class="text-center">Trusted by over 800+ companies</h2>
           <div class="companys d-flex justify-content-center align-items-center m-4">
             <div class="row">
@@ -483,6 +483,24 @@
           </div>
         </section>
     </main>
+    <footer>
+      <!-- footer section -->
+      <section class="text-center bg-black p-5 ">
+        <div class="footer-area text-white p-5">
+          <h3>J Dev</h3>
+          <small><p class="m-0">Office 41, Zawaya Buildin, Ghala Muscat, </p></small>
+          <small><p class="m-0">Sultanate of Oman</p></small>
+          <small><a class="text-white text-decoration-none m-0" href="">Privacy Ploicy</a></small>
+          <small><a class="text-white text-decoration-none m-0" href="">| Terms of use</a></small>
+          <div class="links mt-3">
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook text-white rounded fs-5 p-1"></i></a>
+            <a href="https://twitter.com/"><i class="fa-brands fa-twitter text-white rounded fs-5 p-1"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin text-white rounded fs-5 p-1"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram text-white rounded fs-5 p-1"></i></a>
+          </div>
+        </div>
+      </section>
+    </footer>
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
