--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
         <section class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-inner rounded">
-                  <div class="carousel-item active">
+                  <div class="carousel-item active bg-black">
                     <img src="images/cover/cover-1.png" class="d-block w-100 carousel-height" alt="cover-1">
-                    <div class="carousel-caption d-md-block mb-5">
+                    <div class="carousel-caption top-50 d-md-block">
                       <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
                       <p class="mb-5">Some representative placeholder content for the first slide.</p>
                       <a class="btn bg-info text-white" href="">Get Started</a>
                     </div>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item bg-black">
                     <img src="images/cover/cover-2.jpg" class="d-block w-100 carousel-height" alt="cover-2">
-                    <div class="carousel-caption d-md-block mb-5">
+                    <div class="carousel-caption d-md-block top-50">
                       <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
                       <p class="mb-5">Some representative placeholder content for the second slide.</p>
                       <a class="btn bg-info text-white" href="">Get Started</a>
                     </div>
                   </div>
-                  <div class="carousel-item">
+                  <div class="carousel-item bg-black">
                     <img src="images/cover/cover-3.jpg" class="d-block w-100 carousel-height" alt="cover-3">
-                    <div class="carousel-caption d-md-block mb-5">
+                    <div class="carousel-caption d-md-block top-50">
                       <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
                       <p class="mb-5">Some representative placeholder content for the third slide.</p>
                       <a class="btn bg-info text-white" href="">Get Started</a>
@@ -206,7 +206,7 @@
             <div class="explore-area mt-5 bg-explore">
                 <div class="row">
                     <div class="col-lg-5 col-md-5">
-                        <img class="img-fluid carousel-height" src="images/working.png" alt="">
+                        <img class="img-fluid h-100" src="images/working.png" alt="">
                     </div>
                     <div class="col-lg-7 col-md-7 d-flex justify-content-center align-items-center">
                         <div class="explore-text p-4">
